<resources>
    <string name="app_name">MyProf</string>
    <!-- Меню -->
    <string name="menu_cat1">Основное</string>
    <string name="menu_cat2">Доп</string>
    <string name="ad_publications">Публикации</string>
    <string name="ad_chats">Чаты</string>
    <string name="ad_acсount">Аккаунт</string>
    <string name="ad_settings">Настройки</string>
    <string name="ad_career_guidance">Профориентация</string>
    <string name="ad_my_publications">Мои публикации</string>
    <string name="open">Открыть</string>
    <string name="close">Закрыть</string>
    <string name="home">Back</string>
    <!-- Hint -->
    <string name="title">Заголовок</string>
    <string name="description">Описание</string>
    <!-- LogIn strings -->
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="create_account">Авторизоваться через Google</string>
    <string name="sign_in">Войти</string>


    <!-- Career -->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="davidova">ТЕСТ \n Э.Х.ДАВЫДОВОЙ</string>
    <string name="klimova">ТЕСТ \n Е.А. КЛИМОВА</string>
    <string name="article">ПРОФОРИЕНТАЦИЯ КАК ВАЖНЫЙ \nЭЛЕМЕНТ НА ПУТИ К \nВЫБОРУ БУДУЩЕЙ ПРОФЕССИИ</string>
    <string name="test_proger">ТЕСТ \n СМОЖЕШЬ ЛИ ТЫ \nСТАТЬ \nПРОГРАММИСТОМ</string>
    <string name="title_activity_career_tests">CareerTestsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Tests fragments text -->
    <string name="test_klimova">Тест Климова</string>
    <string name="test_klimova_start">Начать тест</string>
    <string name="test_klimova_desc">Это классический профориентационный тест «Дифференциально-диагностический опросник (ДДО)»,\n который используется при профориентации и профессионального отбора подростков и взрослых. \n По результатам обследования выявляется ориентация человека на 5 типов профессий, по классификации Е.</string>
</resources>